--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -163,6 +163,7 @@
   @include respond(tabPort) {
     transform: translate(-20rem, -25rem);
     animation: git-anim-phone 2s ease;
+    z-index: 10;
   }
 }
 .linked-in {
@@ -183,12 +184,14 @@
 
     @include respond(tabPort) {
       transform: translate(-10rem, -25rem);
+      z-index: 10;
     }
   }
 
   @include respond(tabPort) {
     transform: translate(-10rem, -25rem);
     animation: linkedIn-anim-phone 3s cubic-bezier(0.6, -0.02, 0.79, 0.5);
+    z-index: 10;
   }
 }
 .instagram {
@@ -208,5 +211,6 @@
   @include respond(tabPort) {
     transform: translate(0rem, -25rem);
     animation: insta-anim-phone 4s cubic-bezier(1, -0.01, 0.79, 0.5);
+    z-index: 10;
   }
 }
